<resources>
    <string name="app_name">TheWalkers</string>
    <string name="send_to">send</string>

    <string name="add_new_website">Add New Website</string>
    <string name="add_new_website_short">Add Website</string>
    <string name="GPUActivity">GPUActivity</string>
    <string name="bitmap_demo_activity">BitmapDemoActivity</string>
    <string name="activity_content_resolver_demo_title">ContentResolverDemo</string>
    <string name="activity_content_resolver_demo_des">com.zy.content.provider.demo</string>
    <string name="list_view_cache">ListView 缓存 Cache</string>
    <string name="translationx"><![CDATA[属性动画<translationX>]]></string>
    <string name="view_create_title">研究View绘制流程</string>
    <string name="activity_android_server_main_title"> Android Server 研究总结</string>
    <string name="start_normal_server"> 开启普通服务</string>
    <string name="stop_normal_server"> 关闭普通服务</string>

    <string name="bind_server"> bind server</string>
    <string name="unbind_server"> unbind server</string>
    <string name="set_name">set</string>
    <string name="get_name">get</string>
    <string name="foo">IntentService foo</string>
    <string name="baz">IntentService baz</string>
    <string name="test">test</string>
    <string name="operation_alpha">operation_alpha</string>
    <string name="activity_view_base_title"> View 基本操作 </string>
    <string name="operation_background">operation_background</string>
    <string name="aa">aa</string>
    <string name="bb">bb</string>
    <string name="cc">cc</string>
    <string name="dd">dd</string>
    <string name="ee">ee</string>
    <string name="ff">ff</string>
    <string name="hello">hello</string>
    <string name="gg">gg</string>
    <string name="hh">hh</string>
    <string name="android_date">Android Date</string>
    <string name="sparse_array">sparse_array</string>
    <string name="sparse_int_array">spare_int_array</string>
    <string name="sparse_long_array">parse_long_array</string>
    <string name="sparse_boolean_array">sparse_boolean_array</string>
    <string name="IntDef">IntDef</string>
    <string name="StringDef">StringDef</string>
    <string name="drag">Drag</string>
</resources>
