<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AndroidDateActivity">

    <TextView
        android:id="@+id/activity_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_date"
        android:textSize="@dimen/sp_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/activity_data_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/activity_data_title"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/activity_data_sparse_array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sparse_array"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/activity_data_sparse_int_array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sparse_int_array"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/activity_data_sparse_long_array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sparse_long_array"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/activity_data_sparse_boolean_array"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sparse_boolean_array"
            tools:ignore="MissingConstraints" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>